added frontend for homepage and user & vendor login pages

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
-  font-family: 'Satoshi', sans-serif;
+  font-family: Satoshi;
+  background-color: #FFF5ED;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
