--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,6 +1,7 @@
 #navbar{
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.2); 
+    z-index: 3;
 }
 
 #navbarNav .navbar-nav .nav-item .nav-link{
@@ -11,4 +12,20 @@
     color: #CB0033 !important;
     font-weight: 600;
     text-decoration: underline;
+}
+
+#username{
+    font-weight: 500;
+    font-size: 19px;
+    padding-left: 6px;
+    text-transform: capitalize;
+    text-align: center;
+    margin: 0;
+    
+}
+
+#dropdown-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
