--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -29,3 +29,45 @@
     justify-content: center;
     align-items: center;
 }
+.dropdown-submenu {
+    position: relative;
+  }
+  
+  .dropdown-submenu > .dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -1px;
+  }
+  
+  #are-you-vendor{
+    text-transform: uppercase;
+  }
+
+  .login-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+
+    #login-buttons{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        #login-btn{
+            font-size: 18px;
+            font-weight: 600;
+            color: #CB0033;
+            height: 30px;
+            margin: 0 5px 0 5px;
+        }
+
+        #signup-btn{
+            font-size: 18px;
+            font-weight: 600;
+            height: 30px;
+            margin: 0 5px 0 5px;
+        }
+    }
+  }
