--- a/src/components/User Login/userLogin.css
+++ b/src/components/User Login/userLogin.css
@@ -127,6 +127,10 @@ form .login-btn {
     text-align: end;
 }
 
+#eye-icon{
+    color: #414141;
+}
+
 
 @media screen and (max-width:1200px) {
     .form-container {
