--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,79 +1,86 @@
-#navbar{
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.2); 
-    z-index: 3;
+#navbar {
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.2);
+  z-index: 3;
 }
 
-#navbarNav .navbar-nav .nav-item .nav-link{
-    font-size: 19px;
-    font-weight: 500;
-}
-#navbarNav .navbar-nav .nav-item .nav-link.active{
-    color: #CB0033 !important;
-    font-weight: 600;
-    text-decoration: underline;
+#navbarNav .navbar-nav .nav-item .nav-link {
+  font-size: 19px;
+  font-weight: 500;
 }
 
-#username{
-    font-weight: 500;
-    font-size: 19px;
-    padding-left: 6px;
-    text-transform: capitalize;
-    text-align: center;
-    margin: 0;
-    
+#navbarNav .navbar-nav .nav-item .nav-link.active {
+  color: #CB0033 !important;
+  font-weight: 600;
+  text-decoration: underline;
 }
 
-#dropdown-button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#username {
+  font-weight: 500;
+  font-size: 19px;
+  padding-left: 6px;
+  text-transform: capitalize;
+  text-align: center;
+  margin: 0;
+
 }
+
+#dropdown-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .dropdown-submenu {
-    position: relative;
-  }
-  
-  .dropdown-submenu > .dropdown-menu {
-    top: 0;
-    left: 100%;
-    margin-top: -1px;
-  }
-  
-  #are-you-vendor{
-    text-transform: uppercase;
-  }
+  position: relative;
+}
 
-  .login-section{
+.dropdown-submenu>.dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -1px;
+}
+
+#are-you-vendor {
+  text-transform: uppercase;
+}
+
+.login-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+
+  #login-buttons {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 
+    #login-btn {
+      font-size: 18px;
+      font-weight: 600;
+      color: #CB0033;
+      height: 30px;
+      margin: 0 5px 0 5px;
+    }
 
-    #login-buttons{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-        #login-btn{
-            font-size: 18px;
-            font-weight: 600;
-            color: #CB0033;
-            height: 30px;
-            margin: 0 5px 0 5px;
-        }
-
-        #signup-btn{
-            font-size: 18px;
-            font-weight: 600;
-            height: 30px;
-            margin: 0 5px 0 5px;
-        }
+    #signup-btn {
+      font-size: 18px;
+      font-weight: 600;
+      height: 30px;
+      margin: 0 5px 0 5px;
     }
   }
+}
 
-  #category-option:hover{
-    background-color: #CB0033;
-    color: white;
-    cursor: pointer;
-  }
+#category-option:hover {
+  background-color: #CB0033;
+  color: white;
+  cursor: pointer;
+}
+
+.custom-dropdown-width {
+  min-width: 250px;
+  width: auto;
+}
